--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,8 @@ header{
     display: flex;
     align-items: center;
     margin-left: 15px;
-
+    margin-right: 15px;
+    border-bottom: 1px solid #edecec;
     h3{
         margin-right: 10px;
         font-style: italic;
