--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -12,27 +12,29 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 20px;
 }
 
 .areaApresentacao{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin-right: 30px;
     img{
-        margin: 0 10px;
+        margin: 15px 10px;
         border-radius: 50%;
     }
     p{
-        text-align: center;
+        font-size: 2.5em;
     }
 }
 
 .apresentacao{
     text-align: justify;
     font-size: 1.3em;
+    width: 300px;
 }
 
 .areaProjetos{
