--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 /* Filename: styles.css */
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -24,7 +24,8 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font-family: 'Comfortaa', sans-serif;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 200;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
