--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -16,10 +16,12 @@
 }   
 
 .areaApresentacao{
+    background: rgb(82,81,89);
+    background: linear-gradient(90deg, rgba(82,81,89,1) 0%, rgba(42,42,47,1) 35%, rgba(0,0,0,1) 100%);
     border-radius: 5px;
     color: white;
     position: relative;
-    background-color: #393e40;
+    background-color: #000000;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -29,10 +31,11 @@
     img{
         left: -50px;
         position: absolute;
+        border-radius: 5px;
     }
     p{
         margin-left: 120px;
-        font-weight: 300;
+        font-weight: 600;
         font-size: 1.5em;
     }
 }
@@ -41,6 +44,36 @@
     text-align: left;
     font-size: 1.3em;
     width: 80%;
+}
+
+.areaTecnologias{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 1em 1em;
+    p{
+        font-weight: 500;
+        position: absolute;
+        left: -60px;
+        top: 15px
+    }
+    div{
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        background-color: #EEE5E9;
+        padding: 0.5em 2em;
+        border-radius: 20px;
+    }
+    svg{
+        margin: 0 1em;
+    }
+    svg:hover {
+        transition-duration: 0.7s;
+        transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+      }
 }
 
 .areaProjetos{
@@ -68,7 +101,7 @@
 }
 
 .projetos{
-    background-color: #393e40;
+    background-color: #D64933;
 }
 
 
@@ -101,9 +134,24 @@
 }
 
 @media  screen and (max-width: 1100px) {
-    
     .areaProjetos{
         justify-content: center;
+    }
+}
+
+@media screen and (max-width: 800px){
+    .areaTecnologias{
+        div{
+            p{
+                position: static;
+                width: 100%;
+                margin-top: 0.7em;
+                margin-bottom: 1.5em;
+            }
+            svg{
+                margin-bottom: 1.5em;
+            }
+        }
     }
 }
 
@@ -123,4 +171,5 @@
     .bemVindo{
         margin: 40px auto;
     }
+    
 }
