--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 header{
+    min-width: 100%;
     padding: 10px 20px;
     background-color: #FFF;
     display: flex;
@@ -19,5 +20,25 @@ header{
         text-decoration: none;
         color: #D64933;
         font-weight: 600;
+    }
+}
+
+.logoutArea{
+    margin-left: auto;
+    margin-right: 2rem;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-items: flex-end;
+    p{
+        margin-right: 1rem;
+    }
+    button{        
+        padding: 0.5rem 1rem;
+        border: none;
+        background-color: #D64933;
+        border-radius: 4px;
+        font-weight: 300;
+        color: #FFF;
     }
 }
