--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -19,6 +19,10 @@
     padding: 50px;
     border: 1px solid;
     border-radius: 10px;
+    span{
+        font-weight: 400;
+        color: #D64933;
+    }
 }
 
 .loginArea{
